container spacing corrected

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 }
 
 .time {
-  font-size: 4vw;
+  font-size: 30px;
   padding: 2rem;
   width: fit-content;
 }
